<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mSRLLogin"
    android:background="@color/white"

    tools:context="co.com.store.login.LoginActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="24dp"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/mTVTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_mono_bold"
            android:gravity="center"
            android:text="@string/sing_in_label"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <android.support.constraint.Guideline
            android:id="@+id/guide"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <EditText
            android:id="@+id/mEtEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/sign_in_boxes_background"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_user"
            android:fontFamily="@font/roboto_mono"
            android:hint="@string/email_label"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guide" />

        <EditText
            android:id="@+id/mETPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/sign_in_boxes_background"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_password"
            android:fontFamily="@font/roboto_mono"
            android:hint="@string/password_label"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mEtEmail" />

        <Button
            android:id="@+id/mBTNSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/sign_in_button_background"
            android:paddingBottom="16dp"
            android:paddingEnd="48dp"
            android:paddingStart="48dp"
            android:paddingTop="16dp"
            android:text="@string/sing_in_label"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mETPassword" />

    </android.support.constraint.ConstraintLayout>



</android.support.v4.widget.SwipeRefreshLayout>
